@@ -1,6 +1,13 @@
 Release 2.7.0
 =============
 
+New features
+------------
+
+- New exception :class:`rpy2.rinterface.RParsingError`. Errors
+  occurring when parsing R code through :func:`rpy2.rinterface.parse`
+  raise this exception (previously :class:`rpy2.rinterface.RRuntimeError`).
+  
 
 Release 2.6.1
 =============
